# bazel-build-files

./: README.md  WORKSPACE
cJSON/: BUILD.bazel
example/: WORKSPACE
fmt/: BUILD.bazel
gflags/: BUILD.bazel
google-benchmark/: BUILD.bazel
gtest/: BUILD.bazel
rapidjson/: BUILD.bazel
simdjson/: BUILD.bazel
yyjson/: BUILD.bazel
